# 00_Vscode_2

./: .gitattributes  .gitignore  README.md  Result - SAP Data per CE, per PC.drawio  file_changes 2.db  file_changes.db  mydatabase.db
.github/workflows/: main_ibrahho-python.yml
01_Python/00_Test_project/: .env  test_env.py
01_Python/01_YouTube_Download/: YouTube2.py  YouTube4.py  YouTube_1080.py  YouTube_1080_V2.py  YouTube_1080_V3.py  YouTube_1080_V4_Loop.py  YouTube_Final.py  Youtube.ipynb  Youtube.py  Youtube3.py
01_Python/02_Python_DB/: 00_Python_Link_DB.py  01_Create_DB.py  02_Select_In_DB.py  Database.db  mydatabase.db
01_Python/03_ChatGPT/: 00_ChatGPT_DataFrame.ipynb  00_Markdown_V1.md  ChatGPT.md  README.md
01_Python/04_Material/: 00_Try_Except.py  01_YouTube_ML.md
01_Python/05_YouTube_ML/: 00_YouTube_ML.ipynb
01_Python/06_Website_Autoscraper/: 00_Website_Autoscraper.ipynb
01_Python/07_Poetry_Env/: pyproject.toml
01_Python/07_Poetry_Env/Poetry_Env/: testing.py
01_Python/09_Password_Azure/: 00_Azure_Secret.ipynb
01_Python/10_Track_Folder/: 00_Track_Folder.py  01_Track_Folder.py  02_Track_Folder.py  03_sql.ipynb  04_Track_Folder.py  05_Track_Folder.py  06_sql2.ipynb  07_Track_Folder.py  08_Track_Folder.py  09_Track_Folder.py  10_Track_Folder.py  11_Track_Folder_git.py  asking.md  (+1 more)
05_DataBricks/: 00_Connection_VSCODE.ipynb  JDBC.ipynb
06_PySpark/: 01_PySpark.py  02_PySpark.ipynb  newamazon.csv
07_Excel_Python/: 00_Testing_V1.xlsx
11_Docker/: Docker.md
12_DataEng_Airflow_Astro/: README.md
13_airflow_docker/: docker-compose.yaml
(+182 files in other folders)
