[tool.poetry]
name = "poetry-env"
version = "0.0.1"
description = "How to use poetry env"
authors = ["Hossam Tabana <hossam.tabana@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
pandas = "^2.1.0"
matplotlib = "^3.7.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
